css/site.css
.menu {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 25;
    top: 0;
    left: 0;
    background-color: var(--muted-border-color);
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 0.25rem;
}

.menu > div {
    padding-top: 1em;
    padding-left: 0.4em;
}

#overlay {
    display: none;
    background-color: var(--contrast);
    opacity: 0.4;
    z-index: 2;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    overflow: auto;
}

body > nav {
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    right: 0;
    padding: 0.25rem;
    display: flex;
    justify-content: flex-start;
    background-color: var(--background-color);
    border-bottom: 1px solid var(--muted-color);
}

.menu a {
    padding: var(--spacing);
    text-decoration: none;
    font-size: 1.25em;
    color: var(--contrast);
    display: block;
    transition: 0.3s;
}
  
.menu a:hover {
    color: var(--contrast-hover);
}

.menu #menuClose {
    position: absolute;
    top: 0;
    right: var(--spacing);
    margin-top: 0.4rem;
    margin-left: 5em;
}

.inner {
    height: 100%;
    font-size: 2em;
    max-width: 80%;
    margin-left: auto;
    margin-right: auto;
    padding-top: 0.3em;
    padding-bottom: 3em;
}

nav.docSlider-pager {
    display: initial;
}

button.docSlider-button.selected
{
    background-color: var(--primary);
}

button.docSlider-button
{
    background-color: var(--primary);
    padding: unset;
}

ion-icon {
    color: var(--contrast);
}

nav > ul > li > a {
    margin-left: 0.25rem;
}

#themeSwitcher {
    position: fixed;
    top: 0;
    margin-top: 0.4rem;
    right: var(--spacing);
    z-index: 200;
}

article > header {
    margin-bottom: var(--spacing);
}

.techsvg {
    max-width: 50px;
    min-width: 50px;
}

/* Thanks cssgrid-generator.com */
.skillGrid {
    display: grid;
    grid-template-columns: 0.75fr 2fr 0.75fr 2fr 0.75fr 2fr;
    grid-template-rows: repeat(5, 1fr);
    grid-column-gap: 3px;
    grid-row-gap: 5px;
    align-items: center;
} 

.skillGrid > div > p {
    margin-bottom: 0;
}

#cv-download {
    position: fixed;
    right: calc(var(--spacing) * 11.5);
} 

article {
    margin-top: var(--block-spacing-vertical);
    margin-bottom: 0;
    padding-bottom: calc(var(--block-spacing-vertical) * 0.5);
}

.example-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content:flex-start;
    align-items: flex-start;
    align-content: flex-start;
  }
  
  .example-item {
    width: 100%; 
    margin: 1%;
    display: block;
    flex-grow: 0;
    flex-shrink: 1;
    flex-basis: auto;
    align-self: auto;
    order: 0;
    background: var(--code-background-color);
    box-shadow: var(--card-box-shadow);
    padding: 20px;
    
  }

  .example-image-container {
      margin-bottom: 1rem;
      text-align: center;
  }

  .example-item > p
  {
    font-size: small;
    margin-bottom: 0.5rem;
  } 

  .example-item > ul,
  .example-item > ul > li
  {
    font-size: small;
  }

  .example-item > h3
  { 
    padding-bottom: 0.5rem;
    margin-bottom: 1rem;
    border-bottom: 1px solid var(--muted-color);
    text-align: center;
  }

  .example-button-grid
  { 
    grid-column-gap: var(--grid-spacing-horizontal);
    grid-row-gap: 0.6em;
    display: grid;
    grid-template-columns: 1fr;
    margin: 0;
  }

@media screen and (min-width: 576px) {
    #cv-download {
        position: fixed;
        right: calc(var(--spacing) * 5.5);
    } 

    .example-item 
    {
        flex: 0 1 100%;
    }
}

@media screen and (min-width: 768px) {
    #cv-download {
        position: fixed;
        right: calc(var(--spacing) * 6.5);
    } 

    .example-item 
    {
        flex: 0 1 48%;
    }
}

@media screen and (min-width: 992px) {
    #cv-download {
        position: fixed;
        right: calc(var(--spacing) * 8.5);
    } 

    .example-item 
    {
        flex: 0 1 48%;
    }
}

@media screen and (min-width: 1200px) {
    #cv-download {
        position: fixed;
        right: calc(var(--spacing) * 11.5);
    } 

    .example-item 
    {
        flex: 0 1 30%;
    }
}

